--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Vue Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <!-- <script src="main.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 </head>
 <body>
 
@@ -16,15 +13,8 @@
     {{ message }}
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
-
-  
-<script>
-new Vue({
-  el: '#app',
-  data: {
-    message: 'Hello Vue!!!!!'
-  }
-})
-</script>
