--- a/index.html
+++ b/index.html
@@ -9,20 +9,11 @@
 </head>
 <body>
 
-  <!-- <div id="index">
-    {{text.title}}
-    <br>
-    <h1>Test</h1>
-    <div id="test">
-      {{text.copy}}
-    </div>
-    <br>
-    {{text.image}}
-  </div> -->
   <div id="index">
     <repeater :info="header"></repeater>
     <repeater :info="service_1"></repeater>
     <repeater :info="service_2"></repeater>
+    <repeater :info="service_3"></repeater>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
